[tool.poetry]
name = "graphmetrics-api"
version = "0.1.0"
description = "A fastapi service to receive nodes and edges, apply network analysis metrics, and return them."
authors = ["Sean McLeaish <smcleaish@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
networkx = "^3.2.1"
fastapi = "^0.110.0"
pydantic = "^2.6.3"

[tool.poetry.group.dev.dependencies]
pylint = "^3.1.0"
pytest = "^8.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
