[tool.poetry]
name = "graphmetrics-api"
version = "0.1.0"
description = "A fastapi service to receive nodes and edges, apply network analysis metrics, and return them."
authors = ["Sean McLeaish <smcleaish@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
networkx = "^3.2.1"
fastapi = "^0.110.0"
pydantic = "^2.6.3"
python-louvain = "^0.16"
uvicorn = "^0.29.0"

[tool.poetry.group.dev.dependencies]
pylint = "^3.1.0"
pytest = "^8.0.2"
mypy = "^1.8.0"
black = "^24.2.0"
docformatter = "^1.7.5"
pylint-pytest = "^1.1.7"
pylint-pydantic = "^0.3.2"
pylsp-mypy = "^0.6.8"
isort = "^5.13.2"
matplotlib = "^3.8.4"

[tool.mypy]
strict = true
mypy_path = "typings"
files = "coordextract, tests"

[tool.black]
line-length = 79

[tool.pylsp-mypy]
enabled = true
live_mode = true
strict = true
mypy_path = "typings"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
